create github pages

--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@ body{font-family: Roboto;}blockquote{border-color: #0dd1ff;}div[submit-success] 
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="amp-lightbox-carousel slider5 cid-s41FtSdTSv" id="slider5-a">
+<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="amp-lightbox-carousel slider5 cid-s41FtSdTSv" id="slider5-a">
 	
 	
-	<amp-state id="selecteds55NX0IjV8">
+	<amp-state id="selecteds55PN6shm8">
 		<script type="application/json">
 				{
 					"slide": 0
@@ -111,7 +111,7 @@ body{font-family: Roboto;}blockquote{border-color: #0dd1ff;}div[submit-success] 
 		<h4 class="mbr-fonts-style mbr-section-subtitle mbr-light align-center mbr-pb-3 display-2">
 <div><em><strong>El estilo que nunca pasa.
 </strong></em></div><div><em><strong>Only good vibes.</strong></em></div></h4>
-		<amp-carousel width="450" height="300" layout="responsive" type="slides" loop="" id="wizard-carousels55NX0IjV8" on="slideChange:AMP.setState({selecteds55NX0IjV8: {slide: event.index}})" data-delay="3000">
+		<amp-carousel width="450" height="300" layout="responsive" type="slides" loop="" id="wizard-carousels55PN6shm8" on="slideChange:AMP.setState({selecteds55PN6shm8: {slide: event.index}})" data-delay="3000">
 			<div class="item slider-image mbr-flex">
 				<div class="item-wrapper">
 					<amp-img src="assets/images/92b03a81bdc6b0d95bbfbd459cf0bf7d-236x354.jpg" layout="responsive" width="200" height="300" alt="image" class="placeholder-loader lb-image">
